# minecraft_dqn_interface

./: .gitignore  Action.py  ActionSet.py  CMakeLists.txt  CMakeLists.txt~  DeepMindPlayer.py  Player.py  README.md  game.py  game_config.py  game_globals.py  interface.py  level_editor.py  minecraft_dqn_interface.cpp  minecraft_dqn_interface.cpp~  minecraft_dqn_interface.hpp
maps/: maps.txt  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tasks/: Big_World.py  Complex_Walkway.py  Dangerous_Walkway.py  Path_Creation.py  Task.py  TinyWalkway.py  Walkway.py
